Minor alignment issue on export screen

--- a/src/css/element-plus-enhancements.scss
+++ b/src/css/element-plus-enhancements.scss
@@ -205,6 +205,10 @@
                 flex-grow: 1;
                 margin: 0;
 
+                .el-row {
+                    width: 100%;
+                }
+
                 > .el-select,  > .el-input {
                     width: 100%;
                     .el-input__inner {
