--- a/src/css/main-light.css
+++ b/src/css/main-light.css
@@ -23224,6 +23224,9 @@ body.ogr-full-page .opengraphica {
   }
   */
 }
+.opengraphica .el-form-item-group .el-form-item .el-form-item__content .el-row {
+  width: 100%;
+}
 .opengraphica .el-form-item-group .el-form-item .el-form-item__content > .el-select, .opengraphica .el-form-item-group .el-form-item .el-form-item__content > .el-input {
   width: 100%;
 }
